--- a/src/InvestimentosCaixa.Api/appsettings.json
+++ b/src/InvestimentosCaixa.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=InvestimentosCaixa;User Id=sa;Password=SenhaF0rte!2025;TrustServerCertificate=True;"
+  }
 }
