--- a/src/InvestimentosCaixa.Application/InvestimentosCaixa.Application.csproj
+++ b/src/InvestimentosCaixa.Application/InvestimentosCaixa.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InvestimentosCaixa.Domain\InvestimentosCaixa.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
