telemetria, endpoint produto por dia, jwt auth

--- a/src/InvestimentosCaixa.Api/appsettings.json
+++ b/src/InvestimentosCaixa.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=InvestimentosCaixa;User Id=sa;Password=SenhaF0rte!2025;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Key": "ChaveSuperSecretaCom32Caracteres!",
+    "Issuer": "CaixaEconomicaFederal",
+    "Audience": "Usuarios",
+    "ExpiresInMinutes": 60
   }
 }
