--- a/src/InvestimentosCaixa.Api/appsettings.json
+++ b/src/InvestimentosCaixa.Api/appsettings.json
@@ -14,5 +14,9 @@
     "Issuer": "CaixaEconomicaFederal",
     "Audience": "Usuarios",
     "ExpiresInMinutes": 60
+  },
+  "Redis": {
+    "Connection": "redis:6379,password=MinhaSenhaForteLocalRedis123,abortConnect=false",
+    "InstanceName": "InvestimentosCaixa:"
   }
 }
