--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
@@ -12,6 +10,17 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:7-alpine
+    container_name: investimentos-redis
+    command: ["redis-server", "--requirepass", "MinhaSenhaForteLocalRedis123"]
+    environment:
+      - REDIS_PASSWORD=MinhaSenhaForteLocalRedis123
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+
   api:
     build:
       context: .
@@ -21,9 +30,11 @@ services:
       - "5000:80"
     depends_on:
       - sqlserver
+      - redis
     environment:
       - ASPNETCORE_URLS=http://0.0.0.0:80
       - ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=InvestimentosCaixa;User Id=sa;Password=SenhaF0rte!2025;TrustServerCertificate=True;
+      - REDIS_CONNECTION=redis:6379,password=MinhaSenhaForteLocalRedis123,abortConnect=false
     networks:
       - app-network
 
