--- a/src/InvestimentosCaixa.Application/InvestimentosCaixa.Application.csproj
+++ b/src/InvestimentosCaixa.Application/InvestimentosCaixa.Application.csproj
@@ -33,4 +33,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="InvestimentosCaixa.Tests" />
+	</ItemGroup>
+
 </Project>
